@@ -56,6 +56,8 @@ Core and builtins
 
 Extension modules
 
+- posix.mknod was added.
+
 - The locale module now exposes the C library's gettext interface.
 
 - A security hole ("double free") was found in zlib-1.1.3, a popular
